--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 <div class="row diceArea justify-content-center">
     <div class="col-12 col-sm-6 row justify-content-center " id="dice1">
         <img src="images/dice6.png" alt="dice 1">
-    </div>
+        <div class="col-12 text-center player" id="player1"><h1>Player 1</h1></div>
+      </div>
     <div class="col-12 col-sm-6 row justify-content-center" id="dice2">
-        <img src="images/dice6.png" alt="dice 1">        
+        <img src="images/dice6.png" alt="dice 1">
+        <div class="col-12 text-center player" id="player2"><h1>Player 2</h1></div>
     </div>
 </div>
+
 <div class="row justify-content-center">
     <button class="btn btn-outline-danger " id="roll">Roll</button>
 </div>
