--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     
 </head>
 <body>
+<div style="margin: 3%;">
 <div class="container-fluid text-center" style="margin-top:5px;">
     <h1 class="center " id="result">Dice Game</h1>
 </div>
@@ -35,6 +36,7 @@
 
 <div class="row justify-content-center">
     <button class="btn btn-outline-danger " id="roll">Roll</button>
+</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
