--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
     <div class="col-12 col-sm-6 row justify-content-center " id="dice1">
         <img src="images/dice6.png" alt="dice 1">
         <div class="col-12 text-center player" id="player1"><h1>Player 1</h1></div>
-      </div>
+        <div class="col-12 text-center player" id="score1"><h1>0</h1></div>
+    </div>
     <div class="col-12 col-sm-6 row justify-content-center" id="dice2">
         <img src="images/dice6.png" alt="dice 1">
         <div class="col-12 text-center player" id="player2"><h1>Player 2</h1></div>
+        <div class="col-12 text-center player" id="score2"><h1>0</h1></div>
+    
     </div>
+    
 </div>
 
 <div class="row justify-content-center">
